# QueensPuzzleWithSAT

./: CMakeLists.txt  generateSAT.cpp  generateSAT.h  main.cpp
src/: generateSAT.cpp  main.cpp
